2008-10-10  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvparse.c: (gst_flv_parse_tag_audio),
	(gst_flv_parse_tag_video):
	Use gst_pad_alloc_buffer_and_set_caps() to make sure we get
	a buffer with caps that we can work with (i.e. the pad's caps).

	Add non-keyframe video frames to the index too but without the
	keyframe flag.

	Add audio frames to the index only if we have no video stream.

2008-10-10  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvparse.c: (gst_flv_parse_tag_audio),
	(gst_flv_parse_tag_video):
	Create pads from the pad templates, use fixed caps on them
	and only activate them after the caps are set.

2008-10-10  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	Disable flacparse for this release as it's too buggy.

2008-10-10  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/flacparse/gstbaseparse.c (gst_base_parse_push_buffer),
	(gst_base_parse_update_upstream_durations):
	Fix compiler warning on OS/X about parameters not matching
	the debug format string.

2008-10-09  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/deinterlace2/tvtime/tomsmocomp.c:
	(gst_deinterlace_method_tomsmocomp_class_init):
	Fix unused variable compiler warning when not building
	X86 assembly.

2008-10-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvdemux.c: (gst_flv_demux_loop):
	* gst/flv/gstflvparse.c: (gst_flv_parse_tag_timestamp):
	* gst/flv/gstflvparse.h:
	Get an approximate duration of the file by looking at the timestamp
	of the last tag in pull mode. If we get (maybe better) duration from
	metadata later we'll use that instead.

2008-10-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvdemux.c: (gst_flv_demux_pull_range),
	(gst_flv_demux_pull_tag), (gst_flv_demux_pull_header):
	Refactor _pull_range() logic with checks into a seperate function
	to make things a bit more readable.

2008-10-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
